<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/homeBackgroundImage"
        android:layout_width="2912px"
        android:layout_height="1632px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

    <ImageButton
        android:id="@+id/homeSingleplayerImageButton"
        android:contentDescription="@string/singleplayer"
        android:layout_width="640px"
        android:layout_height="934px"
        android:layout_marginTop="-150dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.194"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245"
        app:srcCompat="@drawable/app_icon" />

    <ImageButton
        android:id="@+id/homeTeamImageButton"
        android:contentDescription="@string/team_management"
        android:layout_width="286px"
        android:layout_height="410px"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <ImageButton
        android:id="@+id/homeInventoryImageButton"
        android:contentDescription="@string/inventory"
        android:layout_width="412px"
        android:layout_height="390px"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <ImageButton
        android:id="@+id/homeMultiplayerImageButton"
        android:contentDescription="@string/multiplayer_inactive"
        android:layout_width="644px"
        android:layout_height="750px"
        android:layout_marginBottom="-26dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:filterTouchesWhenObscured="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

    <ImageButton
        android:id="@+id/muteImageButton"
        android:contentDescription="@string/mute_sound"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logoutImageButton"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/logoutImageButton"
        android:contentDescription="@string/logout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
/>


</androidx.constraintlayout.widget.ConstraintLayout>