<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battle_samurai_background">

    <TextView
        android:id="@+id/battle_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="HP: 100/100"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="10"
        android:textAllCaps="true" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/friendly_character"
        android:layout_width="216dp"
        android:layout_height="302dp"
        android:layout_marginBottom="-35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.991"
        app:srcCompat="@drawable/pokemon1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="447dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.613"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934"
        app:srcCompat="@drawable/battle_chatbox" />

    <Button
        android:id="@+id/attack_smash"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/smash"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/attack_Defend"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/defend"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <!--Enemy-->

    <Button
        android:id="@+id/attack_run"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/run"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.751"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/attack_quickSlash"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:fontFamily="@font/mario"
        android:text="@string/quick_slash"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="326dp"
        android:layout_height="186dp"
        android:contentDescription="@string/enemy_character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069"
        app:srcCompat="@drawable/battle_samurai" />

    <TextView
        android:id="@+id/battle_enemy_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="10"
        android:text="HP: 100/100"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

</androidx.constraintlayout.widget.ConstraintLayout>