<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmailField"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:hintTextColor="@color/white"
        app:boxBackgroundColor="@color/transperantBlack"
        app:boxStrokeColor="@color/selector"
        app:boxStrokeWidth="1dp"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"      app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textAutoComplete"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordField1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/transperantBlack"
        app:boxStrokeColor="@color/selector"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFFFFF"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmailField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordField2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/transperantBlack"
        app:boxStrokeColor="@color/selector"
        app:boxStrokeWidth="1dp"
        app:hintTextColor="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#FFFFFF"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordField1"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerRegisterButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/transperantPrimary"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordField2"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/registerCancelButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/transperantSecondary"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerRegisterButton"
        app:layout_constraintVertical_bias="0.1"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Large"
        app:strokeColor="@color/secondary"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>